# chainweb-indexer

./: .env  Cargo.toml  Dockerfile  README.md
configuration/: base.yaml
migrations/: 20221028115355_create_block_table.sql  20221028144845_create_process_blocks_logs.sql
scripts/: init_db.sh
src/: configuration.rs  entities.rs  fetch_service.rs  ingest.rs  lib.rs  main.rs  startup.rs  types.rs  utils.rs
