[package]
name = "chainweb-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "chainweb_indexer"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9.0"
base64-url = "1.4.10"
backoff = { version = "0.4.0", features = ["tokio"] }
thiserror = "1.0.37"
anyhow = "1.0.65"
config = "0.13.2"
serde-aux = "4.0.0"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }


[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
    "bigdecimal",
]
